fixed dark theme on mobile

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -196,7 +196,7 @@
     padding: 0 0.5rem;
     border: 0;
     outline: none;
-    background-color: $primary-color;
+    background-color: $code-background-color;
     color: #fff;
     cursor: pointer;
     z-index: 100;
@@ -259,7 +259,7 @@
     padding: 5px;
     border: 1px solid $border-color;
     border-radius: $border-radius;
-    background: #fff;
+    background: $code-background-color;
     box-shadow: 0 0 10px rgba(#000, 0.25);
 
     a {
@@ -269,7 +269,7 @@
 
       &:hover {
         color: $masthead-link-color-hover;
-        background: mix(#fff, $primary-color, 75%);
+        background: mix(#000, $background-color, 5%);
       }
     }
 
